--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include COPYING
-include policy/sample.pol
+include filters/.save
+include policies/sample.pol
 include def/NETWORK.net
 include def/SERVICES.svc
