--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,10 @@
-include COPYING
-include filters/.save
-include policies/sample.pol
-include def/NETWORK.net
-include def/SERVICES.svc
+include AUTHORS
+include LICENSE
+include README.md
+include aclcheck_cmdline.py
+include aclgen.py
+include definate.py
+include tests/README
+recursive-include def *
+recursive-include definate *
+recursive-include policies *
