--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,11 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
-        # existing travis
+        echo "running existing travis checks"
         flake8 . --count --select=W291,W293,W391 --statistic
-        # stop the build if there are Python syntax errors or undefined names
+        echo "stop the build if there are Python syntax errors or undefined names"
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        echo "exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide"
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
