--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
       with:
         py-version: ${{ matrix.py-version }}
     - name: Setup environment variables
-      run: echo "WFDT::$(date +'%Y%m%d_%H%M%S')" >> $GITHUB_ENV
+      run: |
+        echo "wfdt=$(date +'%Y%m%d_%H%M%S')" >> $GITHUB_ENV
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -46,10 +47,10 @@ jobs:
         aclgen --output_directory ./output/current --logtostderr
         mkdir -p ./output/dist
         cd ./output/current/ && \
-          zip -r ../dist/capirca_output_files_${{ matrix.py-version }}_$WFDT.zip .
+          zip -r ../dist/capirca_output_files_${{ matrix.py-version }}_${{ env.wfdt }}.zip .
         ls -alh *
     - name: Upload generated policies
       uses: actions/upload-artifact@v2
       with:
-        name: capirca_output_files_${{ matrix.py-version }}_$WFDT
-        path: ./output/dist/capirca_output_files_${{ matrix.py-version }}_$WFDT.zip
+        name: capirca_output_files_${{ matrix.py-version }}_${{ env.wfdt }}
+        path: ./output/dist/capirca_output_files_${{ matrix.py-version }}_${{ env.wfdt }}.zip
