--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,8 +73,9 @@ jobs:
       run: |
         sudo npm install -g diff2html diff2html-cli
         diff2html --version
-        diff -qr current/output master/output > ./artifacts/policy_diff.html
-        # | diff2html --input stdin --file ./artifacts/policy_diff.html
+        diff -qr current/output master/output > ./artifacts/policy_output.diff | true
+        cat ./artifacts/policy_output.diff | grep Files | grep differ | cut -d" " -f2 | cut -d "/" -f2 > ./artifacts/files.list
+        while read p; do diff -u master/output/$p current/output/$p | diff2html -i stdin --file ./artifacts/$p.html | true; done < ./artifacts/files.list
     - name: Upload generated policies
       uses: actions/upload-artifact@v2
       with:
@@ -84,4 +85,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: capirca_output_policy_diff
-        path: ./artifacts/policy_diff.html
+        path: ./artifacts/
