--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,12 +48,14 @@ jobs:
         if [ -f test-requirements.txt ]; then pip install -r test-requirements.txt; fi
     - name: Lint with flake8
       run: |
+        cd current
         flake8 . --count --select=W291,W293,W391 --statistic
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 \
           --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        cd current
         pytest
     - name: Perform end-to-end testing with current branch or pull request
       run: |
@@ -86,6 +88,7 @@ jobs:
         while read p; do diff -u master/output/$p current/output/$p | \
           diff2html -i stdin --file ./artifacts-diff/$p.html | \
           true; done < ./artifacts-diff/files.list
+        sed -i '/Diff to HTML by/d' ./artifacts-diff/*.html
     - name: Upload generated policies
       uses: actions/upload-artifact@v2
       with:
