--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Build, install, and run
       run: |
         python setup.py sdist bdist_wheel
-        python -m pip -v install --find-links=dist capirca
+        python -m pip -v install --find-links=dist --no-index capirca
         aclgen --output_directory .\output --logtostderr
         powershell Compress-Archive -Force output\* output.zip
     - name: Upload generated policies
