Run the build for Python 3.6 on a supported version
Using matrix expansions (https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs#expanding-or-adding-matrix-configurations),
run python3.6 build jobs on the most recent OS that supports 3.6.

This is required since ubuntu-latest was updated to 22.04 in October 2022 - github.blog/changelog/2022-11-09-github-actions-ubuntu-latest-workflows-will-use-ubuntu-22-04/

PiperOrigin-RevId: 500793907

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,17 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     timeout-minutes: 20
     strategy:
       fail-fast: true
       matrix:
-        python-version: [3.6.13, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9]
+        include:
+          - os-version: ubuntu-latest
+          - python-version: 3.6
+            os-version: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
+
 
     steps:
     - name: Checkout branch with changes
