Reduce permissions for github action workflow, and prevent accidentally committing credentials to release artifact.
PiperOrigin-RevId: 730978360

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ def/AUTOGEN.net
 tests/characterization_data/filters_actual
 tools/new_lint_errors.txt
 
+# Exclude secrets
+gha-creds-*.json
 
 # Recommended python excludes
 # Byte-compiled / optimized / DLL files
