Refactor Github Action per b/485167538
PiperOrigin-RevId: 872104412

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Log into registry
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${GITHUB_ACTOR} --password-stdin
 
       - name: Build and tag the image
         run: docker build . --tag $IMAGE_NAME
